--- a/build.gradle
+++ b/build.gradle
@@ -49,3 +49,9 @@ dependencies {
     implementation 'io.springfox:springfox-swagger-ui:2.8.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+task printJarName {
+    doLast {
+        println "${rootProject.name}-${version}.jar"
+    }
+}
